# NeuroFrame

./: .gitignore  main.py  pyproject.toml
.github/: pull_request_template.md
config/: environment.yaml  requirements.txt
neuroframe/: pyproject.toml
neuroframe/src/neuroframe/: __init__.py
neuroframe/src/neuroframe/assertions/: __init__.py  layers_assertions.py  points_assertions.py
neuroframe/src/neuroframe/logger/: formaters.py  logger.py
neuroframe/src/neuroframe/mouse/: Mouse.py  _assertions.py  _properties.py
neuroframe/src/neuroframe/mouse_class/: MicroCT.py  Segmentation.py  __init__.py
neuroframe/src/neuroframe/mouse_class/cached_properties/: _MRI.py  _MedicalImage.py  _Segmentation.py
neuroframe/src/neuroframe/mouse_class/properties/: _MedicalImage.py
neuroframe/src/neuroframe/pipeline/: __init__.py  align.py  align_bl.py  extract_bl.py  extract_frame.py  extract_skull.py  layer_colapse.py
neuroframe/src/neuroframe/plots/: __init__.py  align_bl_sanity.py
neuroframe/src/neuroframe/registrator/: registrator.py  registrator_utils.py
neuroframe/src/neuroframe/registrator/types/: Affine.py  BSpline.py  Rigid.py
neuroframe/src/neuroframe/styling/: __init__.py
neuroframe/src/neuroframe/utils/: __init__.py  geometry_utils.py  image_utils.py
neuroframe/tests/: __init__.py
neuroframe/tests/integration/pipeline/: test_align.py  test_extract_bl.py  test_extract_skull.py
scripts/: cli_mouse_run.py  compress.py  mice_run.py  mouse_run.py  view_brain.py  wt_template_run.py
src/neuroframe/: __init__.py
tests/integration/: test_integration.py
(+118 files in other folders)
